# pico-json-reader

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  README.md  main.c  setup.sh  test.json
src/: pico-json-reader.c
src/include/: pico-json-reader.h
